--- a/langs/ceceppaml-it_IT.po
+++ b/langs/ceceppaml-it_IT.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Hueman\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-03-11 18:21+0100\n"
-"PO-Revision-Date: 2014-03-11 18:21+0100\n"
+"PO-Revision-Date: 2014-03-13 17:13+0100\n"
 "Last-Translator: Alessandro Senese <senesealessandro@gmail.com>\n"
 "Language-Team: \n"
 "Language: it_IT\n"
@@ -2055,8 +2055,8 @@ msgstr "Stringhe del plugin"
 #~ msgid "Debug"
 #~ msgstr "Debug"
 
-#~ msgid "Hello"
-#~ msgstr "Hello"
+msgid "Hello"
+msgstr "Ciao"
 
-#~ msgid "Categories & Tags"
-#~ msgstr "Categorie & Tag"
+msgid "Categories & Tags"
+msgstr "Categorie & Tag"
