--- a/langs/ceceppaml-it_IT.po
+++ b/langs/ceceppaml-it_IT.po
@@ -1,10 +1,10 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: Artificer\n"
+"Project-Id-Version: Attivamente\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-08-20 13:57+0100\n"
 "PO-Revision-Date: 2013-08-20 14:01+0100\n"
-"Last-Translator:   <not@for.all>\n"
+"Last-Translator: Alessandro Senese <senesealessandro@gmail.com>\n"
 "Language-Team: \n"
 "Language: it_IT\n"
 "MIME-Version: 1.0\n"
